--- a/VideoBox_RN/ios/Podfile
+++ b/VideoBox_RN/ios/Podfile
@@ -13,7 +13,7 @@ target 'VideoBox' do
     pod 'Colours'
     pod 'ReactiveCocoa', '~> 2.5'
 
-
+    pod 'pop'
 # 'node_modules'目录一般位于根目录中
 # 但是如果你的结构不同，那你就要根据实际路径修改下面的`:path`
 pod 'React', :path => '../node_modules/react-native', :subspecs => [
