--- a/ReactDemo01/package.json
+++ b/ReactDemo01/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.3",
+    "react-native-elements": "^0.17.0",
+    "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.11",
     "react-timer-mixin": "^0.13.3"
   },
