--- a/ReactDemo03/android/settings.gradle
+++ b/ReactDemo03/android/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'ReactDemo03'
+include ':react-native-zip-archive'
+project(':react-native-zip-archive').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-zip-archive/android')
+include ':react-native-fs'
+project(':react-native-fs').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fs/android')
 
 include ':app'
