--- a/ReactDemo03/package.json
+++ b/ReactDemo03/package.json
@@ -7,8 +7,11 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"moment": "^2.19.2",
 		"react": "16.0.0-beta.5",
-		"react-native": "0.49.3"
+		"react-native": "0.49.3",
+		"react-native-fs": "^2.8.5",
+		"react-native-zip-archive": "^2.1.0"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
