--- a/ReactDemo03/package.json
+++ b/ReactDemo03/package.json
@@ -11,6 +11,7 @@
 		"moment": "^2.19.2",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.3",
+		"react-native-bgnativemoduleexampleforsml": "^1.0.0",
 		"react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
 		"react-native-fs": "^2.8.5",
 		"react-native-zip-archive": "^2.1.0"
